--- a/Rails-Backend/Gemfile
+++ b/Rails-Backend/Gemfile
@@ -9,6 +9,7 @@ gem 'spring', :group => :development
 
 gem 'pg'
 
+gem 'rack-cors', :require => 'rack/cors'
 
 
 # To use ActiveModel has_secure_password
