--- a/Rails-Backend/Gemfile
+++ b/Rails-Backend/Gemfile
@@ -9,8 +9,6 @@ gem 'spring', :group => :development
 
 gem 'pg'
 
-
-
 # To use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
@@ -25,3 +23,8 @@ gem 'bcrypt', '~> 3.1.7'
 
 # To use debugger
 # gem 'ruby-debug19', :require => 'ruby-debug'
+group :development, :test do
+  gem 'rspec-rails'
+  gem 'shoulda-matchers'
+  gem 'database_cleaner'
+end
