--- a/Rails-Backend/Gemfile
+++ b/Rails-Backend/Gemfile
@@ -12,6 +12,10 @@ gem 'rack-cors', :require => 'rack/cors'
 
 gem 'devise_token_auth'
 
+gem 'dotenv'
+
+gem 'jwt'
+
 # To use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
